# colloseum-hackathon

./: .env.example  .env.supabase.example  .gitignore  Anchor.toml  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: vercel-production.yml
.vercel/: project.json
apps/web/: .env.example  README.md  index.html  package-lock.json  package.json  vercel.environment.template  vercel.json  vite.config.ts
docs/: APP-GUIDE.md  CREATOR-TREASURY-BUILD-PLAN.md  DESIGN-AUTOMATED-DISBURSEMENT.md  ESSENTIALS.md  GETTING-STARTED.md  HOST-WIDGET-INTEGRATION.md  INVARIANTS-PHASE-A.md  SECURITY-AND-EMBED.md  SUPABASE-AUTH.md  SUPABASE-CUSTOM-SMTP.md  SUPABASE-SELF-HOSTED-EMAIL.md
idl/: creator_treasury.json
keys/: README.md  creator_treasury-dev-keypair.json
programs/creator-treasury/: Cargo.toml
programs/creator-treasury/src/: lib.rs
scripts/: anchor-build-docker.sh  apply-solana-keybags.mjs  apply-solana-keybags.sh  check-supabase-setup.mjs  devnet-deploy-docker.sh  devnet-solana-docker.sh  devnet.mjs  generate-vercel-paste-env.mjs  install-postgresql-client.ps1  link-sbf-platform-tools.mjs  open-supabase-dashboard.mjs  prepare-program-keypair.mjs  solana-idea-spark.mjs  supabase-interactive.sh  supabase-post-migration.mjs  supabase-set-auth-urls.mjs  supabase-set-smtp-resend.mjs  treasury-seed.mjs  vercel-apply-env-from-paste.sh
scripts/lib/: load-dotenv-files.mjs
supabase/: config.toml  docker-compose.self-host-mailpit.yml  mailpit-compose.yml  self-hosted-smtp.env.example
supabase/self-host/: README.md
tests/: creator-treasury.ts
(+70 files in other folders)
