[package]
name = "creator-treasury"
version = "0.1.0"
description = "Creator team treasury: vault, approvals, timelock releases"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "creator_treasury"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
